// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CxToastFooter customize 1`] = `
<div>
  <div
    class="toast-footer bazinga"
  >
    Test
  </div>
</div>
`;

exports[`loads and displays CxToastFooter component 1`] = `
<div>
  <div
    class="toast-footer"
  >
    Test
  </div>
</div>
`;
